[build-system]
  requires = ["setuptools>=68"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "lanbeam"
  version = "0.1.0"
  description = "Local network file drops with one-time share tokens."
  readme = "README.md"
  requires-python = ">=3.10"
  license = "MIT"
  authors = [{ name = "Nripanka Das" }]
  keywords = [
    "lan",
"file-sharing",
"local-first",
"privacy",
"python"
  ]
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
  ]
  dependencies = [

  ]

  [project.optional-dependencies]
  dev = ["pytest>=8", "build>=1.2", "ruff>=0.6"]

  [project.scripts]
  lanbeam = "lanbeam.cli:main"

  [project.urls]
  Homepage = "https://github.com/nripankadas07/lanbeam"
  Repository = "https://github.com/nripankadas07/lanbeam"
  Issues = "https://github.com/nripankadas07/lanbeam/issues"

  [tool.pytest.ini_options]
  testpaths = ["tests"]

  [tool.ruff]
  line-length = 100
  target-version = "py310"

  [tool.setuptools.packages.find]
  where = ["src"]
